# matmul

./: .gitignore  README.md  create_data.py  numba_gemm.py  numpy_matmal.py  pure_python_matmal.py  python_gemm.py  utils.py
cpp/: CMakeLists.txt  README.md  build.sh  main.cpp  utils.h
cpp/scripts/: run.sh
python/: README.md  main.py  numba_gemm.py  utils.py
